spec/e2e/if/if_brackets.lit
# requires bracket after the if condition
if (true) println "bad" # error: [line 2] Error at "println": I was expecting a '{' after the if condition.

# requires bracket to close the if block
if true {
  println "bad" # error: [line 7] Error at end: I was expecting a '}' to close the block.
